--- a/Front/src/styles/navbar.css
+++ b/Front/src/styles/navbar.css
@@ -1,3 +1,4 @@
+/* Navbar CSS */
 .navbar {
     background-color: #E3FEF7;
     width: 100%;
@@ -168,4 +169,29 @@
         font-size: 1.3rem;
         padding: 20px 10px 20px 10px;
     }
+}
+
+/* overlay.css */
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+    display: none;
+}
+
+.overlay.visible {
+    display: block;
+}
+
+.app-container {
+    position: relative;
+}
+
+.app-container.sidebar-open {
+    overflow: hidden;
 }
