--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -1,13 +1,42 @@
+/* Reset general */
 * {
   margin: 0;
   padding: 0;
-  list-style: none;
   box-sizing: border-box;
 }
 
 body,
 html {
   height: 100%;
-  overflow: visible;
-  /* Asegúrate de que esto no esté limitando la visibilidad */
+  overflow-x: hidden;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+.slick-prev,
+.slick-next {
+  color: black;
+}
+
+.slick-prev::before,
+.slick-next::before {
+  color: black;
+}
+
+.slick-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.slick-slide img {
+  max-width: 150px;
+  max-height: 150px;
+  object-fit: contain;
 }
