--- a/Front/src/styles/PopularSection.css
+++ b/Front/src/styles/PopularSection.css
@@ -1,11 +1,28 @@
+/* popularSection.css */
 .popular-section {
+    background-color: #e3fef7;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    margin: 0 auto;
-    max-width: 1200px;
+    margin-top: 25px;
+    max-width: 100%;
+    padding: 40px 20px;
+    border-radius: 10px;
 }
 
 .header {
-    margin-bottom: 20px;
+    width: 1100px;
+    gap: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.header-most-pupular-info {
+    text-align: start;
 }
 
 .header h2 {
@@ -16,47 +33,15 @@
 .header p {
     font-size: 1.2em;
     color: #555;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 .cards-container {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 50px;
     margin-bottom: 20px;
-}
-
-.card {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 300px;
-    text-align: left;
-}
-
-.card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-
-.card-content {
-    padding: 15px;
-}
-
-.card h3 {
-    font-size: 1.5em;
-    margin: 0 0 10px;
-}
-
-.card p {
-    font-size: 1em;
-    color: #777;
-}
-
-.rating {
-    font-size: 1.2em;
-    color: #ffa500;
 }
 
 .view-more {
@@ -65,16 +50,24 @@
 }
 
 .view-more-button {
-    background-color: #00503C;
+    background-color: #416368;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px 30px;
     border: none;
     border-radius: 5px;
     font-size: 1em;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .view-more-button:hover {
-    background-color: #003924;
+    background-color: #135d66;
+}
+
+.view-more-button svg {
+    width: 20px;
+    height: 20px;
 }
