--- a/Front/src/styles/Cards.css
+++ b/Front/src/styles/Cards.css
@@ -1,11 +1,16 @@
+/* Cards.css */
 .card {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     text-align: left;
     transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card:hover {
@@ -20,6 +25,10 @@
 
 .card-content {
     padding: 15px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card h3 {
@@ -30,6 +39,8 @@
 .card p {
     font-size: 1em;
     color: #777;
+    margin: 0 0 15px;
+    /* Añade un margen inferior para espacio */
 }
 
 .rating {
@@ -42,5 +53,5 @@
 .rating .star {
     width: 20px;
     height: 20px;
-    fill: #ffa500;
+    color: #ffa500;
 }
