--- a/Front/src/styles/PopularSection.css
+++ b/Front/src/styles/PopularSection.css
@@ -13,7 +13,8 @@
 }
 
 .header {
-    width: 1100px;
+    width: 100%;
+    max-width: 1100px;
     gap: 20px;
     display: flex;
     align-items: center;
@@ -40,7 +41,8 @@
 .cards-container {
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 80px;
+    flex-wrap: wrap;
     margin-bottom: 20px;
 }
 
@@ -70,4 +72,42 @@
 .view-more-button svg {
     width: 20px;
     height: 20px;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .header-most-pupular-info {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .cards-container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .view-more-button {
+        justify-content: center;
+        width: 100%;
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 480px) {
+    .header h2 {
+        font-size: 2em;
+    }
+
+    .header p {
+        font-size: 1em;
+    }
+
+    .cards-container {
+        gap: 20px;
+    }
 }
